# User_Registration_API

./: database.py  main.py  models.py  pyproject.toml
backend/: .coverage  .env  README.md  database.py  main.py  models.py  pyproject.toml  test_main.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: LoginForm.jsx  RegistrationForm.jsx
